--- a/Musica.html
+++ b/Musica.html
@@ -19,7 +19,7 @@
 <center>
     <iframe src="https://open.spotify.com/embed/album/0AJaaCzMDJgavsDODS55T7" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>   <iframe src="https://open.spotify.com/embed/album/6QMjsHiy0bt4r8ulVU0CmZ" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/album/33jf1nIRLfj1oIEu9FG4D6" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    <iframe src="https://open.spotify.com/embed/album/1I5tmJwXguMI6aD2yE3Iuz" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5boYMWVbdPCfLdTJxS0QW8?utm_source=generator&theme=0" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    <iframe src="https://open.spotify.com/embed/album/1I5tmJwXguMI6aD2yE3Iuz" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
 
   <iframe <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0z0rQ3SyEaDWgS58OQ2o2Y?utm_source=generator" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
