--- a/menu.html
+++ b/menu.html
@@ -30,10 +30,10 @@
 
 
 
-      <div style= "text-align: top;">
+    <!--<div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 25%; color: red"><a href="Fotografias.html"> Fotografias</b>
-      </div>
+      </div>-->
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
@@ -97,7 +97,7 @@
 
 <div style= "text-align: top;">
   <font size="18" face=Arial>
-<b style="left:635px; position: absolute;top: 85%; color: red"><a href="freeks.html">F R E E K S</b>
+<b style="left:635px; position: absolute;top: 85%; color: red"><!--<<a href="freeks.html">F R E E K S--></b>
 </div>
 
   <body>
