--- a/menu.html
+++ b/menu.html
@@ -80,6 +80,10 @@
       <b style="left:700px; position: absolute;top: 79%; color: red"><a href="descarga.html"> Descarga</b>
       </div>
 
+      <div style= "text-align: top;">
+        <font size="18" face=Arial>
+      <b style="left:635px; position: absolute;top: 85%; color: black"><!--<<a href="freeks.html">-->F R E E K S</b>
+
 
     </center>
 
@@ -95,10 +99,7 @@
     <font size="7" face=Arial>
 <h1 style="left:615px; position: absolute;top: 4%; color: black">FreekTom</h1>
 
-<div style= "text-align: top;">
-  <font size="18" face=Arial>
-<b style="left:635px; position: absolute;top: 85%; color: red"><!--<<a href="freeks.html">F R E E K S--></b>
-</div>
+
 
   <body>
 
