--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@
 
       <div style= "text-align: top;">
         <font size="18" face=Arial>
-      <b style="left:635px; position: absolute;top: 85%; color: black"><!--<<a href="freeks.html">-->F R E E K S</b>
+      <a style="left:635px; position: absolute;top: 85%; color: black"><strong><!--<<a href="freeks.html">-->F R E E K S</strong></a>
 
 
     </center>
@@ -96,8 +96,8 @@
 </form>
     </center>
 
-    <font size="7" face=Arial>
-<h1 style="left:615px; position: absolute;top: 4%; color: black">FreekTom</h1>
+<font size="7" face=Arial>
+<a style="left:668px; position: absolute;top: 20%; color: black"><strong>FreekTom</strong></a>
 
 
 
@@ -121,6 +121,7 @@
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
+
   }
 
   a {
@@ -130,6 +131,7 @@
     padding: 0px 0px;
     text-decoration: none;
     border-radius: 0px;
+
   }
 
 
