--- a/menu.html
+++ b/menu.html
@@ -97,7 +97,7 @@
     </center>
 
 <font size="7" face=Arial>
-<a style="left:668px; position: absolute;top: 20%; color: black"><strong>FreekTom</strong></a>
+<a style="font-size:65px; left:625px; position: absolute;top: 20%; color: black"><strong>FreekTom</strong></a>
 
 
 
