--- a/menu.html
+++ b/menu.html
@@ -82,8 +82,8 @@
 
       <div style= "text-align: top;">
         <font size="18" face=Arial>
-      <a style="left:635px; position: absolute;top: 85%; color: black"><strong><!--<<a href="freeks.html">-->F R E E K S</strong></a>
-
+      <b class="fr" style="left:635px; position: absolute;top: 85%; color: red"><a href="freeks.html">F R E E K S</b>
+    </div>
 
     </center>
 
@@ -143,6 +143,7 @@
     text-decoration: none;
     border-radius: 5px;
   }
+
 
   /* Aca termina el codigo CSS */
 </style>
