--- a/index.html
+++ b/index.html
@@ -1,42 +1,107 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
-    <title>Free Freaks</title>
-  </head>
-<link rel="icon" href="iconos.png">  <body>
-    <font size="3" style="color: red">® Creado por Freektom (TCL) </font>
-    <center>
-      <font size="5" font="Arial">
-  <h2 id:"titulo" style="color: black">Free Freaks</h2>
 
-      <img src="portada.png" />
-      <br />
-      <a id:"entrada" href="menu.html">ㅤㅤENTRAR </a>
-    </center>
-  </body>
-</html>
-<style media="screen">
-  /* Esto es codigo CSS porque esta adentro de un tag <style> */
 
-  * {   background-color: #b8bb68
+    <style>
 
+    <header>
+
+    body{
+      margin:30;
     }
-  a, h2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Arial Black', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #b8bb68
+
+
+    nav{
+      margin:0;
+    }
+
+    ul{
+
+      list-style-type: none;
+      padding: 0px;
+      background-color: blue;
+      margin: 0;
+      text-align: center;
+    }
+
+    li{
+      display: inline;
+      font-size: 25px;
+      font-family: sans-serif;
+      line-height: 55px;
+    }
+
+    li a {
+      text-decoration: none;
+      color: lightgray;
+      padding: 20px 39px;
+    }
+
+    li a:hover {
+      border-radius: 3px;
+      background-color: red;
+      color: white;
+    }
+
+    p, h1{
+
+      font-family: sans-serif;
+    }
+
+    </style>
+  </ul>
+
+  <li><a href="Index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="#">Services</a></li>
+  <li><a href="#">Partners</a></li>
+  <li><a href="#">Contacts</a></li>
+
+</ul>
+</nav>
+
+
+
+<div class="capa">
+  <div class="parrafo">
+    <div class="background_image">
+
+      <strong><center><p style="font-size:120px; color: white;">Welcome Partners</p></center></strong>
+
+    </div>
+    </div>
+  </div>
 
 
 
 
-  }
-  a {
-    color:black;
-    outline: none;
-    background-color: #b8bb68;
-    padding: 5px 10px;
-    text-decoration: none;
-    border-radius: 5px;
-  }
-  /* Aca termina el codigo CSS */
-</style>
+
+</header>
+
+
+
+    <meta charset="utf-8">
+    <title>Trabjando</title>
+    <link rel="stylesheet" href="supa.css">
+    </head>
+  <body>
+
+  </nav>
+
+
+
+
+
+  </body>
+
+  <footer>
+
+        <div style="position: absolute; bottom: 7px; right: 13px; font-family: sans-serif; color:white">
+        Creado por Tomas Collado Long ⓒ 2021
+        </div>
+    </div>
+
+  </footer>
+
+</html>
