--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 
 
     <meta charset="utf-8">
-    <title>Trabjando</title>
+    <title>Mr.Long</title>
+    <link rel="icon" href="iconos.png">  <body>
     <link rel="stylesheet" href="supa.css">
     </head>
   <body>
