--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <li><a href="Index.html">Home</a></li>
   <li><a href="about.html">About</a></li>
-  <li><a href="#">Services</a></li>
+  <li><a target="_blank" href="start.html">My Web</a></li>
   <li><a href="#">Partners</a></li>
   <li><a href="#">Contacts</a></li>
 
