--- a/about.html
+++ b/about.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
+  <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
 
-    <style>
-
-    <header>
-
-    body{
-      margin:30;
+  <style>
+    <header>body {
+      margin: 30;
     }
 
 
-    nav{
-      margin:0;
+    nav {
+      margin: 0;
     }
 
-    ul{
+    ul {
 
       list-style-type: none;
       padding: 0px;
@@ -25,7 +24,7 @@
       text-align: center;
     }
 
-    li{
+    li {
       display: inline;
       font-size: 25px;
       font-family: sans-serif;
@@ -44,12 +43,12 @@
       color: white;
     }
 
-    p, h1{
+    p,
+    h1 {
 
       font-family: sans-serif;
     }
-
-    </style>
+  </style>
   </ul>
 
   <li><a href="Index.html">Home</a></li>
@@ -58,37 +57,44 @@
   <li><a href="#">Partners</a></li>
   <li><a href="#">Contacts</a></li>
 
-</ul>
-</nav>
+  </ul>
+  </nav>
 
 
+<body>
 
-<div class="capa">
-  <div class="parrafo">
-    <div class="background_image">
 
-    </div>
+  <div class="capa">
+    <div class="parrafo">
+      <div class="background_image">
+
+      </div>
       <img src="ari2.png" alt="I M A G E N">
-    <strong><h1 style="color:white" bolder>Mr.Long</h1></strong>
-        <p style="color:white" bolder>Hello Bosses, welcome to my website totally handmade by me. I made this new page so I could show it on sites where I can get a job as a web designer. My name is Tomas Collado Long and I am 25 years old, I have been studying FronteEnd web development for a year because I really like computer science and it is easy for me to work with it and here as everywhere there are obstacles that challenge me to overcome them and learn from them. If you like how I design the pages, give me that job I'm looking for! I have to clarify that I am very messy in the codes but they work well anyway, greetings.
-  </div>
+      <strong>
+        <h1 style="color:white" bolder>Mr.Long</h1>
+      </strong>
+      <p style="color:white" bolder>Hello Bosses, welcome to my website totally handmade by me. I made this new page so I could show it on sites where I can get a job as a web designer. My name is Tomas Collado Long and I am 25 years old, I have been
+        studying FronteEnd web development for a year because I really like computer science and it is easy for me to work with it and here as everywhere there are obstacles that challenge me to overcome them and learn from them. If you like how I
+        design the pages, give me that job I'm looking for! I have to clarify that I am very messy in the codes but they work well anyway, greetings.
+    </div>
 
 
 
 
 
-</header>
+    </header>
 
 
 
     <meta charset="utf-8">
     <title>Mr.Long</title>
-    <link rel="icon" href="iconos.png">  <body>
     <link rel="stylesheet" href="supa.css">
     </head>
-  <body>
 
-  </nav>
+    <body>
 
-  </body>
+      </nav>
+
+    </body>
+
 </html>
