--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
-
     <style>
 
     <header>
@@ -50,7 +49,16 @@
       font-family: sans-serif;
     }
 
+    li, ul {
+    top:400px;
+    list-style:none;
+    margin:0;
+    padding-top:45px;
+}
+
     </style>
+
+    </div>
   </ul>
 
   <li><a href="Index.html">Home</a></li>
