--- a/about.html
+++ b/about.html
@@ -43,11 +43,17 @@
       color: white;
     }
 
-    p,
-    h1 {
+    p,  h1 {
 
       font-family: sans-serif;
     }
+
+    li, ul {
+    top:400px;
+    list-style:none;
+    margin:0;
+    padding-top:45px;
+}
   </style>
   </ul>
 
