--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=0.0">
+
     <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
     <style>
@@ -56,6 +58,7 @@
     padding-top:45px;
 }
 
+
     </style>
 
     </div>
@@ -76,7 +79,7 @@
   <div class="parrafo">
     <div class="background_image">
 
-      <strong><center><p style="font-size:120px; color: white;">Welcome Partners</p></center></strong>
+      <strong><center><p class="abajo" style="font-size:120px; color: white;">Welcome Partners</p></center></strong>
 
     </div>
     </div>
