--- a/about.html
+++ b/about.html
@@ -2,8 +2,6 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=0.0">
-
   <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
 
@@ -54,7 +52,7 @@
     top:400px;
     list-style:none;
     margin:0;
-    padding-top:45px;
+    padding-top:25x;
 }
   </style>
   </ul>
