--- a/about.html
+++ b/about.html
@@ -6,53 +6,53 @@
 
 
   <style>
-    <header>body {
-      margin: 30;
-    }
+  body{
+    margin:30;
+  }
 
 
-    nav {
-      margin: 0;
-    }
-
-    ul {
-
-      list-style-type: none;
-      padding: 0px;
-      background-color: blue;
-      margin: 0;
-      text-align: center;
-    }
-
-    li {
-      display: inline;
-      font-size: 25px;
-      font-family: sans-serif;
-      line-height: 55px;
-    }
-
-    li a {
-      text-decoration: none;
-      color: lightgray;
-      padding: 20px 39px;
-    }
-
-    li a:hover {
-      border-radius: 3px;
-      background-color: red;
-      color: white;
-    }
-
-    p,  h1 {
-
-      font-family: sans-serif;
-    }
-
-    li, ul {
-    top:400px;
-    list-style:none;
+  nav, ul{
     margin:0;
-    padding-top:25x;
+  }
+
+  ul, ul{
+
+    list-style-type: none;
+    padding: 0px;
+    background-color: transparent;
+    margin: 0;
+    text-align: center;
+  }
+
+  li, ul {
+    display: inline;
+    font-size: 25px;
+    font-family: sans-serif;
+    line-height: 55px;
+  }
+
+  li, a, ul {
+    text-decoration: none;
+    color: lightgray;
+    padding: 20px 39px;
+  }
+
+  li,a, ul:hover {
+    border-radius: 3px;
+    background-color: transparent;
+    color: white;
+  }
+
+  p, h1, ul{
+
+    font-family: sans-serif;
+  }
+
+  li, ul {
+  top:400px;
+  list-style:none;
+  margin:0;
+  padding-top:25px;
 }
   </style>
   </ul>
