--- a/index.html
+++ b/index.html
@@ -1,64 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
-
-    <style>
-
-    <header>
-
-    body{
-      margin:30;
-    }
+<head>
+  <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
 
-    nav{
-      margin:0;
-    }
+  <style>
+  body{
+    margin:30;
+  }
 
-    ul{
 
-      list-style-type: none;
-      padding: 0px;
-      background-color: blue;
-      margin: 0;
-      text-align: center;
-    }
-
-    li{
-      display: inline;
-      font-size: 25px;
-      font-family: sans-serif;
-      line-height: 55px;
-    }
-
-    li a {
-      text-decoration: none;
-      color: lightgray;
-      padding: 20px 39px;
-    }
-
-    li a:hover {
-      border-radius: 3px;
-      background-color: red;
-      color: white;
-    }
-
-    p, h1{
-
-      font-family: sans-serif;
-    }
-
-    li, ul {
-    top:400px;
-    list-style:none;
+  nav, ul{
     margin:0;
-    padding-top:25px;
+  }
+
+  ul, ul{
+
+    list-style-type: none;
+    padding: 0px;
+    background-color: transparent;
+    margin: 0;
+    text-align: center;
+  }
+
+  li, ul{
+    display: inline;
+    font-size: 25px;
+    font-family: sans-serif;
+    line-height: 55px;
+  }
+
+  li, a, ul {
+    text-decoration: none;
+    color: lightgray;
+    padding: 20px 39px;
+  }
+
+  li, a, ul:hover {
+    border-radius: 3px;
+    background-color: transparent;
+    color: white;
+  }
+
+  p, h1, ul{
+
+    font-family: sans-serif;
+  }
+
+  li, ul {
+  top:400px;
+  list-style:none;
+  margin:0;
+  padding-top:25px;
 }
-
-    </style>
-
-    </div>
+  </style>
   </ul>
 
   <li><a href="Index.html">Home</a></li>
@@ -67,8 +62,11 @@
   <li><a href="#">Partners</a></li>
   <li><a href="#">Contacts</a></li>
 
-</ul>
-</nav>
+  </ul>
+  </nav>
+
+
+<body>
 
 
 
