--- a/Index.html
+++ b/Index.html
@@ -1,65 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=0.0">
+
+  <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
+
+  <style>
+  body{
+    margin:30;
+  }
 
 
-    <style>
+  nav, ul{
+    margin:0;
+  }
 
-    <header>
+  ul, ul{
 
-    body{
-      margin:30;
-    }
+    list-style-type: none;
+    padding: 0px;
+    background-color: transparent;
+    margin: 0;
+    text-align: center;
+  }
 
+  li, ul{
+    display: inline;
+    font-size: 25px;
+    font-family: sans-serif;
+    line-height: 55px;
+  }
 
-    nav{
-      margin:0;
-    }
+  li, a, ul {
+    text-decoration: none;
+    color: lightgray;
+    padding: 20px 39px;
+  }
 
-    ul{
+  li, a, ul:hover {
+    border-radius: 3px;
+    background-color: transparent;
+    color: white;
+  }
 
-      list-style-type: none;
-      padding: 0px;
-      background-color: blue;
-      margin: 0;
-      text-align: center;
-    }
+  p, h1, ul{
 
-    li{
-      display: inline;
-      font-size: 25px;
-      font-family: sans-serif;
-      line-height: 55px;
-    }
+    font-family: sans-serif;
+  }
 
-    li a {
-      text-decoration: none;
-      color: lightgray;
-      padding: 20px 39px;
-    }
-
-    li a:hover {
-      border-radius: 3px;
-      background-color: red;
-      color: white;
-    }
-
-    p, h1{
-
-      font-family: sans-serif;
-    }
-
-    </style>
+  li, ul, div {
+  top:150px;
+  list-style:none;
+  margin:0;
+  padding-top:25px;
+}
+  </style>
   </ul>
 
-  <li><a href="Index.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a href="#">Services</a></li>
-  <li><a href="#">Partners</a></li>
-  <li><a href="#">Contacts</a></li>
+  <div><a class="menu" href="Index.html">Home</a></div>
+  <div><a class="menu" href="about.html">About</a></div>
+  <div><a class="menu" target="_blank" href="start.html">My Web</a></div>
+  <div><a class="menu" href="#">Partners</a></div>
+  <div><a class="menu" href="#">Contacts</a></div>
 
-</ul>
-</nav>
+  </ul>
+  </nav>
+
+
+<body>
 
 
 
@@ -67,7 +75,7 @@
   <div class="parrafo">
     <div class="background_image">
 
-      <strong><center><p style="font-size:120px; color: white;">Welcome Partners</p></center></strong>
+      <strong><center><p class="abajo" style="font-size:120px; color: white;">Welcome Partners</p></center></strong>
 
     </div>
     </div>
@@ -82,7 +90,8 @@
 
 
     <meta charset="utf-8">
-    <title>Trabjando</title>
+    <title>Mr.Long</title>
+    <link rel="icon" href="iconos.png">  <body>
     <link rel="stylesheet" href="supa.css">
     </head>
   <body>
