--- a/about.html
+++ b/about.html
@@ -2,17 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=0.0">
+
   <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
 
   <style>
   body{
-    margin:30;
+    margin:0;
   }
 
 
-  nav, ul{
-    margin:0;
+  nav, ul, div{
+    margin:10;
   }
 
   ul, ul{
@@ -24,7 +26,7 @@
     text-align: center;
   }
 
-  li, ul {
+  li, ul{
     display: inline;
     font-size: 25px;
     font-family: sans-serif;
@@ -37,7 +39,7 @@
     padding: 20px 39px;
   }
 
-  li,a, ul:hover {
+  li, a, ul:hover {
     border-radius: 3px;
     background-color: transparent;
     color: white;
@@ -48,8 +50,8 @@
     font-family: sans-serif;
   }
 
-  li, ul {
-  top:400px;
+  li, ul, div {
+  top:65px;
   list-style:none;
   margin:0;
   padding-top:25px;
@@ -57,11 +59,11 @@
   </style>
   </ul>
 
-  <li><a href="Index.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a target="_blank" href="start.html">My Web</a></li>
-  <li><a href="#">Partners</a></li>
-  <li><a href="#">Contacts</a></li>
+  <div><a class="menu" href="Index.html">Home</a></div>
+  <div><a class="menu" href="about.html">About</a></div>
+  <div><a class="menu" target="_blank" href="start.html">My Web</a></div>
+  <div><a class="menu" href="#">Partners</a></div>
+  <div><a class="menu" href="#">Contacts</a></div>
 
   </ul>
   </nav>
@@ -75,11 +77,11 @@
       <div class="background_image">
 
       </div>
-      <img src="ari2.png" alt="I M A G E N">
+      <img style="margin-top: 55px" src="ari2.png" alt="I M A G E N">
       <strong>
-        <h1 style="color:white" bolder>Mr.Long</h1>
+        <h1 style="margin-top: 55px; color:white" bolder>Mr.Long</h1>
       </strong>
-      <p style="color:white" bolder>Hello Bosses, welcome to my website totally handmade by me. I made this new page so I could show it on sites where I can get a job as a web designer. My name is Tomas Collado Long and I am 25 years old, I have been
+      <p style="margin-top: 18px; color:white" bolder>Hello Bosses, welcome to my website totally handmade by me. I made this new page so I could show it on sites where I can get a job as a web designer. My name is Tomas Collado Long and I am 25 years old, I have been
         studying FronteEnd web development for a year because I really like computer science and it is easy for me to work with it and here as everywhere there are obstacles that challenge me to overcome them and learn from them. If you like how I
         design the pages, give me that job I'm looking for! I have to clarify that I am very messy in the codes but they work well anyway, greetings.
     </div>
