--- a/Index.html
+++ b/Index.html
@@ -10,11 +10,11 @@
   }
 
 
-  nav, ul{
+  nav, ul, div{
     margin:0;
   }
 
-  ul, ul{
+  ul, ul, div{
 
     list-style-type: none;
     padding: 0px;
@@ -23,14 +23,14 @@
     text-align: center;
   }
 
-  li, ul{
+  li, ul, div{
     display: inline;
     font-size: 25px;
     font-family: sans-serif;
     line-height: 55px;
   }
 
-  li, a, ul {
+  li, a, ul, div {
     text-decoration: none;
     color: lightgray;
     padding: 20px 39px;
@@ -47,7 +47,7 @@
     font-family: sans-serif;
   }
 
-  li, ul {
+  li, ul, div {
   top:150px;
   list-style:none;
   margin:0;
