--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=0.0">
 
   <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
@@ -10,11 +11,11 @@
   }
 
 
-  nav, ul, div{
+  nav, ul{
     margin:0;
   }
 
-  ul, ul, div{
+  ul, ul{
 
     list-style-type: none;
     padding: 0px;
@@ -23,14 +24,14 @@
     text-align: center;
   }
 
-  li, ul, div{
+  li, ul{
     display: inline;
     font-size: 25px;
     font-family: sans-serif;
     line-height: 55px;
   }
 
-  li, a, ul, div {
+  li, a, ul {
     text-decoration: none;
     color: lightgray;
     padding: 20px 39px;
