--- a/Index.html
+++ b/Index.html
@@ -1,59 +1,71 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.0">
 
   <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
 
   <style>
-  body{
-    margin:30;
-  }
+    body {
+      margin: 30;
+    }
 
 
-  nav, ul{
-    margin:0;
-  }
+    nav,
+    ul {
+      margin: 0;
+    }
 
-  ul, ul{
+    ul,
+    ul {
 
-    list-style-type: none;
-    padding: 0px;
-    background-color: transparent;
-    margin: 0;
-    text-align: center;
-  }
+      list-style-type: none;
+      padding: 0px;
+      background-color: transparent;
+      margin: 0;
+      text-align: center;
+    }
 
-  li, ul{
-    display: inline;
-    font-size: 25px;
-    font-family: sans-serif;
-    line-height: 55px;
-  }
+    li,
+    ul {
+      display: inline;
+      font-size: 25px;
+      font-family: sans-serif;
+      line-height: 55px;
+    }
 
-  li, a, ul {
-    text-decoration: none;
-    color: lightgray;
-    padding: 20px 39px;
-  }
+    li,
+    a,
+    ul {
+      text-decoration: none;
+      color: lightgray;
+      padding: 20px 39px;
+    }
 
-  li, a, ul:hover {
-    border-radius: 3px;
-    background-color: transparent;
-    color: white;
-  }
+    li,
+    a,
+    ul:hover {
+      border-radius: 3px;
+      background-color: transparent;
+      color: white;
+    }
 
-  p, h1, ul{
+    p,
+    h1,
+    ul {
 
-    font-family: sans-serif;
-  }
+      font-family: sans-serif;
+    }
 
-  li, ul, div {
-  top:150px;
-  list-style:none;
-  margin:0;
-  padding-top:25px;
-}
+    li,
+    ul,
+    div {
+      top: 150px;
+      list-style: none;
+      margin: 0;
+      padding-top: 25px;
+    }
   </style>
   </ul>
 
@@ -71,13 +83,17 @@
 
 
 
-<div class="capa">
-  <div class="parrafo">
-    <div class="background_image">
+  <div class="capa">
+    <div class="parrafo">
+      <div class="background_image">
 
-      <strong><center><p class="abajo" style="font-size:120px; color: white;">Welcome Partners</p></center></strong>
+        <strong>
+          <center>
+            <p class="abajo" style="font-size:120px; color: white;">Welcome Partners</p>
+          </center>
+        </strong>
 
-    </div>
+      </div>
     </div>
   </div>
 
@@ -85,32 +101,37 @@
 
 
 
-</header>
+  </header>
 
 
 
-    <meta charset="utf-8">
-    <title>Mr.Long</title>
-    <link rel="icon" href="iconos.png">  <body>
-    <link rel="stylesheet" href="supa.css">
-    </head>
+  <meta charset="utf-8">
+  <title>Mr.Long</title>
+  <link rel="icon" href="T.png">
+
   <body>
+    </head>
 
-  </nav>
+    <body>
+
+      </nav>
 
 
 
 
 
-  </body>
+    </body>
 
-  <footer>
+    <footer>
 
-        <div style="position: absolute; bottom: 7px; right: 13px; font-family: sans-serif; color:white">
+      <div style="position: absolute; bottom: 7px; right: 13px; font-family: sans-serif; color:white">
         Creado por Tomas Collado Long ⓒ 2021
-        </div>
-    </div>
+      </div>
+      </div>
 
-  </footer>
+
+
+    </footer>
+    <link rel="stylesheet" href="supa.css">
 
 </html>
