--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,19 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.0">
 
-  <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
+  <link rel="icon" type="img" href="T.png">
+
 
   <style>
     body {
-      margin: 30;
+      margin: 0;
     }
 
 
     nav,
-    ul {
-      margin: 0;
+    ul,
+    div {
+      margin: 10;
     }
 
     ul,
@@ -61,7 +63,7 @@
     li,
     ul,
     div {
-      top: 150px;
+      top: 65px;
       list-style: none;
       margin: 0;
       padding-top: 25px;
@@ -82,56 +84,33 @@
 <body>
 
 
-
   <div class="capa">
     <div class="parrafo">
       <div class="background_image">
 
-        <strong>
-          <center>
-            <p class="abajo" style="font-size:120px; color: white;">Welcome Partners</p>
-          </center>
-        </strong>
-
       </div>
+      <strong>
+        <center><div style="margin-top: 55px;font-size: 100px;color:white" bolder>Welcome Partnerts</div></center>
+      </strong>
     </div>
-  </div>
 
 
 
 
 
-  </header>
+    </header>
 
 
 
-  <meta charset="utf-8">
-  <title>Mr.Long</title>
-  <link rel="icon" href="T.png">
-
-  <body>
+    <meta charset="utf-8">
+    <title>Mr.Long</title>
+    <link rel="stylesheet" href="supa.css">
     </head>
 
     <body>
 
       </nav>
 
-
-
-
-
     </body>
-
-    <footer>
-
-      <div style="position: absolute; bottom: 7px; right: 13px; font-family: sans-serif; color:white">
-        Creado por Tomas Collado Long ⓒ 2021
-      </div>
-      </div>
-
-
-
-    </footer>
-    <link rel="stylesheet" href="supa.css">
 
 </html>
