--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=0.0">
 
-  <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
+  <link rel="icon" type="img" href="T.png">
 
 
   <style>
