--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=0.0">
 
-  <link rel="icon" type="img" href="C:/Users/Tomas/Desktop/Nueva Web/T.png">
+  <link rel="icon" type="img" href="T.png">
+
 
   <style>
     body {
-      margin: 30;
+      margin: 0;
     }
 
 
     nav,
     ul,
     div {
-      margin: 0;
+      margin: 10;
     }
 
     ul,
-    ul,
-    div {
+    ul {
 
       list-style-type: none;
       padding: 0px;
@@ -29,8 +30,7 @@
     }
 
     li,
-    ul,
-    div {
+    ul {
       display: inline;
       font-size: 25px;
       font-family: sans-serif;
@@ -39,8 +39,7 @@
 
     li,
     a,
-    ul,
-    div {
+    ul {
       text-decoration: none;
       color: lightgray;
       padding: 20px 39px;
@@ -64,7 +63,7 @@
     li,
     ul,
     div {
-      top: 150px;
+      top: 65px;
       list-style: none;
       margin: 0;
       padding-top: 25px;
@@ -85,34 +84,26 @@
 <body>
 
 
-
   <div class="capa">
     <div class="parrafo">
       <div class="background_image">
 
-        <strong>
-          <center>
-            <p class="abajo" style="font-size:120px; color: white;">Welcome Partners</p>
-          </center>
-        </strong>
-
       </div>
+      <strong>
+        <center><div style="margin-top: 55px;font-size: 100px;color:white" bolder>Welcome Partnerts</div></center>
+      </strong>
     </div>
-  </div>
 
 
 
 
 
-  </header>
+    </header>
 
 
 
-  <meta charset="utf-8">
-  <title>Mr.Long</title>
-  <link rel="icon" href="iconos.png">
-
-  <body>
+    <meta charset="utf-8">
+    <title>Mr.Long</title>
     <link rel="stylesheet" href="supa.css">
     </head>
 
@@ -120,19 +111,6 @@
 
       </nav>
 
-
-
-
-
     </body>
-
-    <footer>
-
-      <div style="position: absolute; bottom: 7px; right: 13px; font-family: sans-serif; color:white">
-        Creado por Tomas Collado Long ⓒ 2021
-      </div>
-      </div>
-
-    </footer>
 
 </html>
