--- a/menu.html
+++ b/menu.html
@@ -80,7 +80,7 @@
       <b style="left:700px; position: absolute;top: 79%; color: red"><a href="descarga.html"> Descarga</b>
       </div>
 
-      <div style= "text-align: top;">
+      <div id="div9" style= "text-align: top;">
         <font size="18" face=Arial>
       <b class="fr" style="left:635px; position: absolute;top: 85%; color: red"><a href="freeks.html">F R E E K S</b>
     </div>
@@ -97,7 +97,7 @@
     </center>
 
 <font size="7" face=Arial>
-<a style="font-size:65px; left:625px; position: absolute;top: 16%; color: black"><strong>FreekTom</strong></a>
+<a href="index.html" style="font-size:65px; left:625px; position: absolute;top: 16%; color: black"><strong>FreekTom</strong></a>
 
 
 
@@ -122,6 +122,7 @@
     border-radius: 5px;
   }
 
+
   a {
     color:black;
     outline: none;
@@ -131,6 +132,7 @@
     border-radius: 0px;
 
   }
+
 
 
   button {
