--- a/Dibujos.html
+++ b/Dibujos.html
@@ -5,7 +5,7 @@
     <title>Free Freaks - Dibujos</title>
     <link rel="shortcut icon" type="img/png" href="img/iconos.png">
   </head>
-  <link rel="icon" href="iconos.png">  
+  <link rel="icon" href="iconos.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/lightbox.min.css">
   <script src="js/lightbox-plus-jquery.min.js"></script>
@@ -14,6 +14,8 @@
       <font face="Arial" size="7" color: "black">
       <b><a href="menu.html" style="color: black">Menu</a></b>
     <div class="Galeria">
+      <a href="dib/01.jpg"data-lightbox="Galeria"><img src="dibs/01.jpg"></a>
+      <a href="dib/02.jpg"data-lightbox="Galeria"><img src="dibs/02.jpg"></a>
       <a href="dib/1.jpg"data-lightbox="Galeria"><img src="dibs/1.jpg"></a>
       <a href="dib/2.jpg"data-lightbox="Galeria"><img src="dibs/2.jpg"></a>
       <a href="dib/3.jpg"data-lightbox="Galeria"><img src="dibs/3.jpg"></a>
