--- a/Dibujos.html
+++ b/Dibujos.html
@@ -14,8 +14,8 @@
       <font face="Arial" size="7" color: "black">
       <b><a href="menu.html" style="color: black">Menu</a></b>
     <div class="Galeria">
-      <a href="dib/01.jpg"data-lightbox="Galeria"><img src="dibs/01.jpg"></a>
-      <a href="dib/02.jpg"data-lightbox="Galeria"><img src="dibs/02.jpg"></a>
+      <a href="dib/02.JFIF"data-lightbox="Galeria"><img src="dibs/01.png"></a>
+      <a href="dib/01.JFIF"data-lightbox="Galeria"><img src="dibs/02.png"></a>
       <a href="dib/1.jpg"data-lightbox="Galeria"><img src="dibs/1.jpg"></a>
       <a href="dib/2.jpg"data-lightbox="Galeria"><img src="dibs/2.jpg"></a>
       <a href="dib/3.jpg"data-lightbox="Galeria"><img src="dibs/3.jpg"></a>
