--- a/noticias.html
+++ b/noticias.html
@@ -14,7 +14,12 @@
 
 
     <font face=Arial>
-    <center><a style= "color: black"> <font size="+2">ㅤㅤㅤㅤㅤ20/11/2021 - Hoy Sabado 20 de Noviembre se abrieron las puertaas para participar de esta Agencia Artistica de Inteligencia,ㅤㅤㅤㅤㅤㅤ ㅤtendremos grupo en WhatsApp para pedir criticas, filosofar, etc. La Agencia se llama Free Freaks, (Loquillos Libres) Pasen la voz.ㅤㅤㅤㅤ </a></center>
+
+    <center><div style= "color: black"> <font size="+2">ㅤㅤㅤㅤㅤ9/5/2022 -  Aqui seguimos subiendo material los "Creadores de arte o escritores" mas activos, no hemos sumado mas gente porque por lo que vi, les da miedo y no me pregunto el porque, es todo gratuito y ya en unos meses mas comenzaremos a hacerle publicidad a esta Agencia Artistica de Inteligencia </div></center>
+
+<div>ㅤ</div>
+
+    <center><div style= "color: black"> <font size="+2">ㅤㅤㅤㅤㅤ20/11/2021 - Hoy Sabado 20 de Noviembre se abrieron las puertaas para participar de esta Agencia Artistica de Inteligencia,ㅤㅤㅤㅤㅤㅤ ㅤtendremos grupo en WhatsApp para pedir criticas, filosofar, etc. La Agencia se llama Free Freaks, (Loquillos Libres) Pasen la voz.ㅤㅤㅤㅤ </div></center>
 
 
 
