--- a/junchantxt.html
+++ b/junchantxt.html
@@ -16,6 +16,30 @@
       <strong>
 
 
+
+        <center><h2><font color=white> INCLUSO EL UNIVERSO SE APAGARÁ.</h2></center>
+
+  <font color=red><center><h3>
+    Ceniza roja en una noche atrelazada
+Quema mi vida y se come mi raíz
+Espupelo, escupelo y dejalo morir
+pulmones en fuego y voz opaca
+Dejandolo ser miserable y ganando miseria/incapacidad
+Como un diamante en el cielo
+Tu brillarás, como una estrella muerta, tu brillaras
+Y como un estrella muerta tú serás<h1>ㅤ</h1>
+  </h3>
+
+
+
+        <center><h2><font color=white>VIDA.</h2></center>
+
+  <font color=red><center><h3>
+          Una deslumbrante luciérnaga ilumina aquella niebla espesa, oscuridad de oleo me da vista a mi camino, humo rojo expulsado del pozo , tan hondo ahí guardo mi calma, un cuerpo cargado y débil, frío y desolado, así se siente la vida y si así se siente la vida para que vivir esta vida.<h1>ㅤ</h1>
+  </h3>
+
+
+
       <center><h2><font color=white> LA LUNA Y EL CONEJO.</h2></center>
 
 <font color=red><center><h3>
