--- a/index.html
+++ b/index.html
@@ -69,30 +69,10 @@
       padding-top: 25px;
     }
   </style>
-  </ul>
-
-  <div><a class="menu" href="Index.html">Home</a></div>
-  <div><a class="menu" href="about.html">About</a></div>
-  <div><a class="menu" target="_blank" href="start.html">My Web</a></div>
-  <div><a class="menu" href="#">Partners</a></div>
-  <div><a class="menu" href="#">Contacts</a></div>
-
-  </ul>
-  </nav>
 
 
-<body>
 
 
-  <div class="capa">
-    <div class="parrafo">
-      <div class="background_image">
-
-      </div>
-      <strong>
-        <center><div style="margin-top: 55px;font-size: 100px;color:white" bolder>Welcome Partnerts</div></center>
-      </strong>
-    </div>
 
 
 
@@ -108,6 +88,27 @@
     </head>
 
     <body>
+
+    </ul>
+
+    <div><a class="menu" href="Index.html">Home</a></div>
+    <div><a class="menu" href="about.html">About</a></div>
+    <div><a class="menu" target="_blank" href="start.html">My Web</a></div>
+    <div><a class="menu" href="#">Partners</a></div>
+    <div><a class="menu" href="#">Contacts</a></div>
+
+    </ul>
+    </nav>
+
+      <div class="capa">
+        <div class="parrafo">
+          <div class="background_image">
+
+          </div>
+          <strong>
+            <center><h1 style="margin-top: 55px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
+          </strong>
+        </div>
 
       </nav>
 
