--- a/Index.html
+++ b/Index.html
@@ -63,17 +63,11 @@
     li,
     ul,
     div {
-      top: 65px;
+      top: 105px;
       list-style: none;
       margin: 0;
       padding-top: 25px;
     }
-
-
-    html{
-    overflow-x: hidden;
-    }
-
   </style>
 
 
@@ -112,7 +106,7 @@
 
           </div>
           <strong>
-            <center><h1 style="margin-top: 55px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
+            <center><h1 style="margin-bottom: 2px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
           </strong>
         </div>
 
