--- a/Index.html
+++ b/Index.html
@@ -106,7 +106,7 @@
 
           </div>
           <strong>
-            <center><h1 style="margin-bottom: 2px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
+            <center><h1 style="margin-top: 135px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
           </strong>
         </div>
 
