--- a/Index.html
+++ b/Index.html
@@ -93,9 +93,9 @@
 
     <div><a class="menu" href="Index.html">Home</a></div>
     <div><a class="menu" href="about.html">About</a></div>
+    <div><a class="menu" href="spanish.html">Español</a></div>
     <div><a class="menu" target="_blank" href="start.html">My Web</a></div>
-    <div><a class="menu" href="#">Partners</a></div>
-    <div><a class="menu" href="#">Contacts</a></div>
+    <div><a class="menu" href="contacto.html">Contacto</a></div>
 
     </ul>
     </nav>
@@ -106,7 +106,7 @@
 
           </div>
           <strong>
-            <center><h1 style="margin-top: 135px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
+            <center><h1 style="margin-bottom: 2px; font-size: 100px;color:white" bolder>Welcome Partnerts</h1></center>
           </strong>
         </div>
 
