--- a/spanish.html
+++ b/spanish.html
@@ -96,8 +96,11 @@
       <div class="background_image">
 
       </div>
-
-
+      <img style="margin-top: 76px" src="ari2.png" alt="I M A G E N">
+      <strong>
+        <h1 style="margin-top: 76px; color:white" bolder>Mr.Long en Español</h1>
+      </strong>
+      <p style="margin-top: 18px; color:white" bolder>Hola queridos Jefes, bienvenidos a mi sitio web totalmente hecho a mano por mi. Hice esta nueva página para poder mostrarla en sitios donde pueda conseguir un trabajo como diseñador web. Mi nombre es Tomas Collado Long y tengo 25 años, he estado estudiando desarrollo web FronteEnd durante un año aproximadamente, me gusta mucho la informática y me es fácil trabajar con ella y aquí como en todas partes hay obstáculos que me retan a superarlos y aprender de ellos. Si te gusta como yo diseño las paginas, ¡dame ese trabajo que estoy buscando! Tengo que aclarar que soy muy desordenado en los códigos pero igual funcionan bien, saludos.</p>
     </div>
   </link>
 
@@ -111,19 +114,12 @@
 
     <meta charset="utf-8">
     <title>Mr.Long</title>
-    <link rel="stylesheet" href="capa2.css">
+    <link rel="stylesheet" href="supa.css">
     </head>
 
     <body>
 
-      <strong>
-        <h1 style="margin-top: 76px; color:white" bolder>    <center><div style="margin-top: 76px; color:white" bolder>Contacto:</div></center>
-          <div>ㅤ</div>
-              <center><p style="margin-top: 18px; color:white" bolder><div><a class="menu" href="mailto:agenciafreefreaks@gmail.com">E-Mail</a></div></center>
-
-              <divㅤ</div>ㅤ
-              <center><p style="margin-top: 18px; color:white" bolder ><div><a class="menu" target="_blank" href="https://www.linkedin.com/in/tomas-long-705734247/"> Linkedin </a></div></center>
-      </strong>
+      </nav>
 
     </body>
 
