--- a/about.html
+++ b/about.html
@@ -80,9 +80,9 @@
 
   <div><a class="menu" href="Index.html">Home</a></div>
   <div><a class="menu" href="about.html">About</a></div>
+  <div><a class="menu" href="spanish.html">Español</a></div>
   <div><a class="menu" target="_blank" href="start.html">My Web</a></div>
-  <div><a class="menu" href="#">Partners</a></div>
-  <div><a class="menu" href="#">Contacts</a></div>
+  <div><a class="menu" href="contacto.html">Contacto</a></div>
 
   </ul>
   </nav>
@@ -100,10 +100,7 @@
       <strong>
         <h1 style="margin-top: 76px; color:white" bolder>Mr.Long</h1>
       </strong>
-      <p style="margin-top: 18px; color:white" bolder>Hello Bosses, welcome to my website totally handmade by me. I made this new page so I could show it on sites where I can get a job as a web designer. My name is Tomas Collado Long and I am 25
-        years old, I have been
-        studying FronteEnd web development for a year because I really like computer science and it is easy for me to work with it and here as everywhere there are obstacles that challenge me to overcome them and learn from them. If you like how I
-        design the pages, give me that job I'm looking for! I have to clarify that I am very messy in the codes but they work well anyway, greetings.
+      <p style="margin-top: 18px; color:white" bolder>Hello dear Bosses, welcome to my website entirely handmade by me. I made this new page so that I can show it on sites where I can get a job as a web designer. My name is Tomas Collado Long and I am 25 years old, I have been studying Front End web development for about a year, I really like computing and it is easy for me to work with it and here as everywhere there are obstacles that challenge me to overcome them and learn from them. If you like how I design the pages, give me that job I'm looking for! I have to clarify that I am very messy in the codes but they still work well, greetings.
     </div>
   </link>
 
