--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
 
       <style media="screen">
         * {
-          background-color: #b8bb66
+          background-color: #b9bc69
 
         }
 
@@ -111,12 +111,12 @@
 
   b {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #b8bb66
+    background-color: #b9bc69
   }
   b {
     color: red;
     outline: none;
-    background-color: #b8bb66;
+    background-color: #b9bc69;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
@@ -126,7 +126,7 @@
   a {
     color:black;
     outline: none;
-    background-color: #b8bb66;
+    background-color: #b9bc69;
     padding: 0px 0px;
     text-decoration: none;
     border-radius: 0px;
@@ -138,7 +138,7 @@
   button {
     color:white;
     outline: none;
-    background-color: #b8bb66;
+    background-color: #b9bc69;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
