--- a/start.html
+++ b/start.html
@@ -19,12 +19,12 @@
 <style media="screen">
   /* Esto es codigo CSS porque esta adentro de un tag <style> */
 
-  * {   background-color: #b8bb68
+  * {   background-color: #b9bc69
 
     }
   a, h2 {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial Black', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #b8bb68
+    background-color: #b9bc69
 
 
 
@@ -33,7 +33,7 @@
   a {
     color:black;
     outline: none;
-    background-color: #b8bb68;
+    background-color: #b9bc69;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
