--- a/Dibujos.html
+++ b/Dibujos.html
@@ -16,6 +16,8 @@
     <div class="Galeria">
       <a href="dib/02.JFIF"data-lightbox="Galeria"><img src="dibs/01.png"></a>
       <a href="dib/01.JFIF"data-lightbox="Galeria"><img src="dibs/02.png"></a>
+      <a href="dib/03.png"data-lightbox="Galeria"><img src="dibs/03.JPG"></a>
+      <a href="dib/04.jpg"data-lightbox="Galeria"><img src="dibs/04.PNG"></a>
       <a href="dib/1.jpg"data-lightbox="Galeria"><img src="dibs/1.jpg"></a>
       <a href="dib/2.jpg"data-lightbox="Galeria"><img src="dibs/2.jpg"></a>
       <a href="dib/3.jpg"data-lightbox="Galeria"><img src="dibs/3.jpg"></a>
