--- a/menu.html
+++ b/menu.html
@@ -35,10 +35,10 @@
       <b style="left:700px; position: absolute;top: 25%; color: red"><a href="Fotografias.html"> Fotografias</b>
       </div>-->
 
-      <div style= "text-align: top;">
+      <!--<div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html">Mis Dibujos</b>
-      </div>
+      </div>-->
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
