--- a/menu.html
+++ b/menu.html
@@ -30,15 +30,17 @@
 
 
 
+
+
     <!--<div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 25%; color: red"><a href="Fotografias.html"> Fotografias</b>
-      </div>-->
+      </div>
 
-      <!--<div style= "text-align: top;">
+      <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html">Mis Dibujos</b>
-      </div>
+      </div>-->
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
@@ -47,14 +49,33 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 51%; color: red"><a href="descarga.html"> Descarga</b>
+      </div>
+
+
+
+      <div id="div9" style= "text-align: top;">
+        <font size="18" face=Arial>
+      <b class="fr" style="left:635px; position: absolute;top: 66%; color: red"><a href="freeks.html">F R E E K S</b>
+    </div>
+
+      <div style= "text-align: top;">
+        <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 37%; color: red"><a href="Musica.html"> Mi Musica</b>
       </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 44%; color: red"><a href="Pareidolias.html"> Pareidolias</b>
+      <b style="left:700px; position: absolute;top: 44%; color: red"><a href="Pareidolias.html"> Mis Paredolias</b>
       </div>
 
+      <div style= "text-align: top;">
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 58%; color: red"><a target="_blank" href="https://www.barnesandnoble.com/w/la-misteriosa-aventura-de-alberto-tom-s-collado-long/1142660478"> Mi Audiolibro</b>
+      </div>
+
+
+      <!--
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 55%; color: red"><a href="Videoclips.html"> Videoclips</b>
@@ -65,25 +86,15 @@
       <b style="left:700px; position: absolute;top: 61%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
       </div>
 
-      <div style= "text-align: top;">
-        <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 67%; color: red"><a href="audiolibro.html"> Mi Audiolibro</b>
-      </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 73%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
       </div>
 
-      <div style= "text-align: top;">
-        <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 79%; color: red"><a href="descarga.html"> Descarga</b>
-      </div>-->
+      -->
 
-      <div id="div9" style= "text-align: top;">
-        <font size="18" face=Arial>
-      <b class="fr" style="left:635px; position: absolute;top: 85%; color: red"><a href="freeks.html">F R E E K S</b>
-    </div>
+
 
     </center>
 
