--- a/Musica.html
+++ b/Musica.html
@@ -24,8 +24,7 @@
   <iframe src="https://open.spotify.com/embed/album/1I5tmJwXguMI6aD2yE3Iuz" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
 
-  <iframe <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0z0rQ3SyEaDWgS58OQ2o2Y?utm_source=generator" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0AJaaCzMDJgavsDODS55T7?utm_source=generator" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </center>
 
 
